# UltraStitch

./: .gitignore  app.spec  index.html  license.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
backend/: api.py  app.py  app_menu.py  license.py  project.py  reference.py  registration.py  scan.py  testing.ipynb  testing_adr.ipynb  utils.py
frontend/: main.jsx
frontend/src/: App.jsx  app.css  atom.js  main.jsx  scan.json  utils.js
frontend/src copy/: App.jsx  ContextMenu.jsx  DistanceMeasurement.jsx  ErrorPage.jsx  HoverInfo.jsx  Legends.jsx  ThicknessTooltip.jsx  ViewerDetails.jsx  api.js  atom.js  main.jsx
frontend/src copy/Toolbar/: Toolbar.jsx  index.jsx
frontend/src copy/Viewer2D/: Viewer.jsx  index.jsx
frontend/src/components/: BusyLoader.jsx  CanvasArea.jsx  DrawingSettings.jsx  DrawingShapes.jsx  FormRenderer.jsx  Grid.jsx  HoverThickness.jsx  Measurements.jsx  Menu.jsx  Panel.jsx  Reference.jsx  ReferenceEditor.jsx  ReferenceList.jsx  ScanEditor.jsx  ScanImage.jsx  ScanList.jsx  ThicknessGrid.jsx  Toolbar.jsx  VirtualTable.jsx
frontend/src/hooks/: useApi.jsx  useLoader.jsx
frontend/src/pages/: AboutPage.jsx  ProjectPage.jsx  ViewerPage.jsx
testing/: testing.ipynb  testing_adr.ipynb  testing_h5.ipynb  testing_license.ipynb  ultrascan_to_ultrastitch.ipynb
